[package]
name = "simp"
version = "3.4.1"
authors = ["Axel Kappel"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://simp.axelkappel.se"
description = "The simple image manipulation program"
repository = "https://github.com/Kl4rry/simp"
categories = ["multimedia::images", "multimedia::encoding"]
readme = "README.md"
exclude = ["images", ".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
atty = "0.2.14"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle", "mint"] }
clap = "4.3.21"
confy = "0.6.0"
crevice = { version = "0.14.0", features = ["cgmath"] }
ctrlc = "3.2.0"
directories = "5.0.0"
egui = { version = "0.25.0", features = ["mint"] }
egui-wgpu = "0.25.0"
egui-winit = "0.25.0"
fontdb = "0.16.0"
image = { version = "0.24.5", features = ["exr"] }
imagepipe = "0.5.0"
lazy_static = "1.4.0"
libwebp = { version = "0.1.2", features = ["static"] }
lru = "0.12.0"
mint = "0.5.9"
nanoid = "0.4.0"
num-traits = "0.2.15"
once_cell = "1.14.0"
pollster = "0.3.0"
psd = "0.3.3"
rand = "0.8.5"
rawloader = "0.37.0"
resvg = "0.38.0"
rexif = "0.7.3"
serde = { version = "1", features = ["derive"] }
trash = "3.1"
webbrowser = "0.8.0"
webp-animation = "0.9.0"
wgpu = { version = "0.18.0", features = ["glsl"] }
winit = "0.29.10"

[target.'cfg(not(linux))'.dependencies]
rfd = "0.13.0"

[target.'cfg(linux)'.dependencies]
rfd = { version = "0.13.0", default-features = false, features = ["xdg-portal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = { version = "0.3.9", features = ["everything"] }

[package.metadata.winres]
OriginalFilename = "simp.exe"
FileDescription = "Simp"
LegalCopyright = "Copyright © 2021 Axel Kappel"
ProductName = "Simp"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = []
avif = ["image/avif-decoder"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.75.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
