[package]
name = "simp"
version = "3.8.0"

authors = ["Axel Kappel"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://simp.axelkappel.se"
description = "The simple image manipulation program"
repository = "https://github.com/Kl4rry/simp"
categories = ["multimedia::images", "multimedia::encoding"]
readme = "README.md"
exclude = ["images", ".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle", "mint"] }
clap = { version = "4.5.6", features = ["std", "help", "usage", "error-context", "suggestions"], default-features = false }
clap_mangen = "0.2.21"
confy = "0.6.0"
crevice = { version = "0.16.0", features = ["cgmath"] }
ctrlc = "3.2.0"
directories = "5.0.0"
egui = { version = "0.29", features = ["mint"] }
egui-wgpu = "0.29"
egui-winit = "0.29"
image = { version = "0.25.4", features = ["exr"] }
imagepipe = "0.5.0"
jpegxl-rs = { version = "0.11.0", default-features = false, features = ["image", "vendored"], optional = true }
lexical-sort = "0.3.1"
libheif-rs = { version = "1.0.1", optional = true }
libwebp = { version = "0.1.2", features = ["static"] }
lru = "0.12.0"
mint = "0.5.9"
num-traits = "0.2.15"
pollster = "0.3.0"
psd = "0.3.3"
rand = "0.8.5"
rawloader = "0.37.0"
resvg = "0.43.0"
rexif = "0.7.3"
rfd = { version = "0.15.0", default-features = false }
serde = { version = "1", features = ["derive"] }
trash = "5.1"
webbrowser = "1.0.0"
webp-animation = "0.9.0"
wgpu = { version = "22.1.0", default-features = false, features = ["glsl", "wgsl", "metal", "dx12"] }
winit = { version = "0.30.0", features = ["rwh_05"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = { version = "0.3.9", features = ["everything"] }

[package.metadata.winres]
OriginalFilename = "simp.exe"
FileDescription = "Simp"
LegalCopyright = "Copyright © 2021 - 2024 Axel Kappel"
ProductName = "Simp"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = ["xdg-portal"]
full = ["avif", "jxl", "heif"]
avif = ["image/avif-native"]
jxl = ["dep:jpegxl-rs"]
heif = ["dep:libheif-rs"]
gtk3 = ["rfd/gtk3"]
xdg-portal = ["rfd/xdg-portal", "rfd/async-std"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.81.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
