[package]
name = "simp"
version = "3.10.2"

authors = ["Axel Kappel"]
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/Kl4rry/simp"
description = "The simple image manipulation program"
repository = "https://github.com/Kl4rry/simp"
categories = ["multimedia::images", "multimedia::encoding"]
readme = "README.md"
exclude = ["images", ".github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.6.0", features = ["wayland-data-control"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle", "mint"] }
clap = { version = "4.5.6", features = ["std", "help", "usage", "error-context", "suggestions"], default-features = false }
clap_mangen = "0.2.21"
confy = "1.0.0"
crevice = { version = "0.18.0", features = ["cgmath"] }
ctrlc = "3.2.0"
directories = "6.0.0"
egui = { version = "0.29", features = ["mint"] }
egui-wgpu = "0.29"
egui-winit = "0.29"
image = { version = "0.25.4", features = ["exr"] }
imagepipe = "0.5.0"
jpegxl-rs = { version = "0.11.0", default-features = false, features = ["image", "vendored"], optional = true }
lexical-sort = "0.3.1"
libheif-rs = { version = "1.0.2", optional = true, default-features =  false }
libwebp = { version = "0.1.2", features = ["static"] }
lru = "0.16.0"
mint = "0.5.9"
num-traits = "0.2.15"
pollster = "0.3.0"
psd = "0.3.3"
rand = "0.9.2"
rawloader = "0.37.0"
resvg = "0.45.1"
rexif = "0.7.3"
rfd = { version = "0.15.0", default-features = false }
serde = { version = "1", features = ["derive"] }
trash = "5.1"
webbrowser = "1.0.0"
webp-animation = "0.9.0"
wgpu = { version = "22.1.0", default-features = false, features = ["glsl", "wgsl", "metal", "dx12"] }
winit = { version = "0.30.0", features = ["rwh_05"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = { version = "0.3.9", features = ["everything"] }

[package.metadata.winres]
OriginalFilename = "simp.exe"
FileDescription = "Simp"
LegalCopyright = "Copyright © 2021 - 2025 Axel Kappel"
ProductName = "Simp"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["xdg-portal"]
full = ["avif", "jxl", "heif"]
avif = ["image/avif-native"]
jxl = ["dep:jpegxl-rs"]
heif = ["dep:libheif-rs"]
gtk3 = ["rfd/gtk3"]
xdg-portal = ["rfd/xdg-portal", "rfd/async-std"]
